--- a/sections/rose-quartz.liquid
+++ b/sections/rose-quartz.liquid
@@ -40,13 +40,13 @@
                     </div>
                     <div class="benefit-item">
                         <div class="benefit-content">
-                            <h4>Ancient</h4>
+                            <h4>Ancient Wisdom</h4>
                             <p>Ancient cultures believed in its ability to promote emotional balance, healing, and self-love.</p>
                         </div>
                     </div>
                     <div class="benefit-item">
                         <div class="benefit-content">
-                            <h4>Tech</h4>
+                            <h4>Modern Technology</h4>
                             <p>Today, quartz plays a vital role in timekeeping and computing technologies due to its natural resonant frequencies.</p>
                         </div>
                     </div>
