--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -24,7 +24,7 @@
             <a href="{{ routes.root_url }}" class="nav-link {% if template.name == 'index' %}active{% endif %}">Home</a>
             <a href="/pages/catalog" class="nav-link {% if page.handle == 'catalog' %}active{% endif %}">Catalog</a>
             <a href="/pages/contact" class="nav-link {% if page.handle == 'contact' %}active{% endif %}">Contact</a>
-            <a href="/pages/wholesale" class="nav-link {% if page.handle == 'wholesale' %}active{% endif %}">Become a Partner</a>
+            <a href="/pages/mastercase" class="nav-link {% if page.handle == 'mastercase' %}active{% endif %}">Become a Partner</a>
             
             {% comment %} Shop Button {% endcomment %}
             <a href="{{ routes.collections_url }}" class="nav-cta">Shop</a>
