--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -145,7 +145,7 @@
                 <div class="quick-links">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="/pages/wholesale">Become a Partner</a></li>
+                        <li><a href="/pages/mastercase">Become a Partner</a></li>
                         <li><a href="/pages/products">View Products</a></li>
                         <li><a href="/pages/faq">FAQ</a></li>
                         <li><a href="/pages/shipping">Shipping Information</a></li>
